socket: Fix annotation of g_socket_receive_message

https://bugzilla.gnome.org/show_bug.cgi?id=761337